@@ -25,6 +25,8 @@ FIXES:
 
 - fix potential multi-threading screw-up when loading textures
 
+- fix saving of custom keys for joypad input
+
 - see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX
 
 VP 10.7.3 Changelog
